--- a/Desktop/Kube/httpd.yaml
+++ b/Desktop/Kube/httpd.yaml
@@ -1,8 +1,20 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Pod
 metadata:
-  name: apache
+  name: httpd
+  namespace: my-namespace
 spec:
-  containers:
-  - name: nginx-container
-    image: htttpd
+  replicas: 5
+  selector:
+    matchLabels:
+      app: httpd
+  template:
+    metadata:
+      labels:
+        app: httpd
+    spec:
+      containers:
+        - name: httpd-container
+          image: httpd:latest
+          ports:
+            - containerPort: 80
